static/css/impala/base.css
/************************************/
/*            BASE STYLING          */
/************************************/

/* Welcome to the inner sanctum.
   Nothing goes here that is site-specific.
   Seriously.
*/

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, masthead, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
/* end meyer reset */

/* Bold/Strong should be bold and strong! */
b,
strong {
    font-weight: bold;
}

/* Give abbr and acronym dotted underline. */
abbr,
acronym {
    border-bottom: 1px dotted;
}

/* >> The Magnificent CLEARFIX <<
   Lifted from html5boilerplate.com
   License is Public domain */
.c:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
.c { display: inline-block; }
* html .c { height: 1%; } /* Hides from IE-mac \*/
.c { display: block; }

